# housing

./: README.md  pyproject.toml
data/: houses.parquet
housing/: __main__.py  scatter.py
housing/plot/: main.py
housing/scrape/: __init__.py  __main__.py  data.py  model.py  scraper.py
