[project]
name = "housing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.12.3",
    "funda-scraper>=1.2.1",
    "geopandas>=1.0.1",
    "geopolars>=0.1.0a4",
    "polars>=1.18.0",
    "selenium>=4.27.1",
]
